<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUp"
        android:text="@string/signUp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/lightBlue"
        android:layout_margin="50dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/fisrtName"
        android:minHeight="48dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/lastName"
        android:minHeight="48dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/phoneNumber"
        android:minHeight="48dp"
        android:inputType="phone"
        />

    <EditText
        android:id="@+id/Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/Id"
        android:minHeight="48dp"
        />
    <EditText
        android:id="@+id/etPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/pwd"
        android:minHeight="48dp"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpBtn"
        android:text="@string/signUpBtn"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
</LinearLayout>